--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
+  "name": "data-ba",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-<<<<<<< HEAD
-    "json-server": "^1.0.0-beta.1"
-=======
+    "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.7.2",
+    "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -19,6 +28,5 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "^6.1.1",
     "vite": "^5.2.0"
->>>>>>> e453180 (First com)
   }
 }
